        S4 methods.  See the online documentation.

    o   sort(method = "quick", decreasing = TRUE) is now implemented.

    o   sort.list() has methods "quick" (a wrapper for sort(method =
	"quick", index.return = TRUE) and "radix" (a very fast method
	for small integers).  The default "shell" method works faster
	on long vectors with many ties.


DEPRECATED & DEFUNCT

    o	The assignment operator `_' has been removed.

    o	printNoClass() is defunct.

    o	The classic MacOS port is no longer supported, and its files
	have been removed from the sources.

    o	The deprecated argument 'white' of parse() has been removed.

    o	Methods pacf/plot.mts() have been removed and their functionality
	incorporated into pacf.default/plot.ts().

    o	print.coefmat() is deprecated in favour of printCoefmat()
	(which is identical apart from the default for na.print which
	is changed from "" to "NA", and better handling of the 0-rank
	case where all coefficients are missing).

    o	codes() and codes<-() are deprecated, as almost all uses
	misunderstood what they actually do.

    o	The use of multi-argument return() calls is deprecated: use a
	(named) list instead.

    o	anovalist.lm (replaced in 1.2.0) is now deprecated.

    o	- and Ops methods for POSIX[cl]t objects are removed: the
	POSIXt methods have been used since 1.3.0.

    o	glm.fit.null(), lm.fit.null() and lm.wfit.null() are deprecated.

    o	Classes "lm.null" and "glm.null" are deprecated and all of their
	methods have been removed.

    o	Method weights.lm(), a copy of weights.default(), has been removed.

    o	print.atomic() is now deprecated.


INSTALLATION CHANGES

    o	The zlib code in the sources is used unless the external
	version found is at least version 1.1.4 (up from 1.1.3).

    o	The regression checks now have to be passed exactly, except
	those depending on recommended packages (which cannot be
	assumed to be present).

    o	There are new macros DYLIB_* for building dynamic libraries,